--- a/Webbprojekt-TE15C-1/Web.config
+++ b/Webbprojekt-TE15C-1/Web.config
@@ -9,8 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Webbprojekt-TE15C-1-20180416084636.mdf;Initial Catalog=aspnet-Webbprojekt-TE15C-1-20180416084636;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Webbprojekt-TE15C-1-Identity.mdf;Initial Catalog=Webbprojekt-TE15C-1-Identity;Integrated Security=True" />
+    <add name="StoreContext"
+      connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
+      AttachDbFileName=|DataDirectory|Protoshop.mdf;
+      Initial Catalog=Protoshop;
+      Integrated Security=True"    
+  providerName="System.Data.SqlClient" />
+      
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
