--- a/Webbprojekt-TE15C-1/Web.config
+++ b/Webbprojekt-TE15C-1/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Webbprojekt-TE15C-1-Identity.mdf;Initial Catalog=Webbprojekt-TE15C-1-Identity;Integrated Security=True" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Webbprojekt-TE15C-1-Identity.mdf;Initial Catalog=Webbprojekt-TE15C-1-Identity;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <add name="StoreContext"
       connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
       AttachDbFileName=|DataDirectory|Protoshop.mdf;
